# lab_3_python

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: benchmark.py  bubble_sort.py  bucket_sort.py  counting_sort.py  main.py  math_func.py  queue.py  quick_sort.py  radix_sort.py  sort.py  stack.py
tests/: test_factorial.py  test_fibo.py  test_sort.py
