[project]
name = "labs"
version = "0.1.0"
description = "Algorithmic mini-package"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
